--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/julmot/mark.js.git"
+    "url": "https://github.com/julmot/mark.js.git"
   },
   "dependencies": {},
   "devDependencies": {},
