--- a/package.json
+++ b/package.json
@@ -27,42 +27,42 @@
     "url": "https://github.com/julmot/mark.js/issues"
   },
   "scripts": {
-    "eslint": "eslint src/ test/",
+    "eslint": "eslint --fix src/ test/",
     "karma": "karma start build/karma.config.js",
     "karma-ci": "karma start build/karma.config-ci.js",
     "jsdoc": "jsdoc src/lib/ -d build/doc -R README.md -P package.json -r",
-    "compile": "rollup -c build/rollup.config.js",
+    "compile": "rollup -c build/rollup.config.mjs",
     "build": "npm run eslint && npm run compile && npm run karma && npm run jsdoc",
     "dev": "nodemon --exec \"npm run eslint && npm run compile\" --watch src/ --watch test/ -e js,html",
     "test": "npm run build"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-external-helpers": "^7.0.0",
-    "@babel/plugin-transform-object-assign": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "eslint": "^5.8.0",
+    "@babel/core": "^7.21.0",
+    "@babel/runtime": "7.21.0",
+    "@babel/plugin-transform-runtime": "^7.21.0",
+    "@babel/plugin-transform-object-assign": "^7.18.6",
+    "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.4.0",
+    "eslint": "^8.35.0",
     "eslint-plugin-jasmine-jquery": "^1.0.0",
-    "handlebars": "^4.0.11",
-    "jasmine-core": "^3.2.0",
-    "jquery": "^3.2.1",
-    "jsdoc": "^3.5.5",
-    "karma": "^3.0.0",
+    "handlebars": "^4.7.7",
+    "jasmine-core": "^4.5.0",
+    "jquery": "^3.6.3",
+    "jsdoc": "^4.0.2",
+    "karma": "^6.4.1",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-cli": "^2.0.0",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^2.0.0",
-    "karma-jasmine-jquery": "^0.1.1",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-sauce-launcher": "^1.2.0",
-    "karma-spec-reporter": "0.0.32",
-    "karma-summary-reporter": "^1.4.0",
-    "nodemon": "^1.14.10",
-    "phantomjs-prebuilt": "^2.1.16",
-    "rollup": "^0.67.0",
-    "rollup-plugin-babel": "^4.0.1",
-    "rollup-plugin-cleanup": "^3.0.0",
-    "rollup-plugin-commonjs": "^9.0.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-terser": "^2.0.0"
+    "karma-coverage": "^2.2.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-sauce-launcher": "^4.3.6",
+    "karma-spec-reporter": "0.0.36",
+    "karma-summary-reporter": "^3.1.1",
+    "nodemon": "^2.0.21",
+    "puppeteer": "^19.7.3",
+    "rollup": "^3.18.0",
+    "rollup-plugin-cleanup": "^3.2.1"
   }
 }
